src/ts/tests/fixtures/invalid_service_initializer/static_initializer.ts
// @ts-nocheck
// InvalidServiceInitializer
@Service
export class FooService {
  static init() {}
}
